# ime-rs

./: .gitignore  README.md
.github/workflows/: ci.yml
cpp/: .gitignore  SampleIME.sln  prebuild.ps1
cpp/SampleIME/: ActiveLanguageProfileNotifySink.cpp  BaseDictionaryEngine.cpp  BaseDictionaryEngine.h  BaseWindow.cpp  BaseWindow.h  ButtonWindow.cpp  CandidateListUIPresenter.cpp  CandidateListUIPresenter.h  CandidateWindow.cpp  CandidateWindow.h  Compartment.cpp  Compartment.h  Composition.cpp  CompositionProcessorEngine.cpp  CompositionProcessorEngine.h  Define.h  DictionaryParser.cpp  DictionaryParser.h  DictionarySearch.cpp  DictionarySearch.h  DisplayAttribute.cpp  DisplayAttributeInfo.cpp  DisplayAttributeInfo.h  DisplayAttributeProvider.cpp  DllMain.cpp  EnumDisplayAttributeInfo.cpp  EnumTfCandidates.cpp  File.cpp  File.h  FileMapping.cpp  FileMapping.h  Globals.cpp  Globals.h  KeyEventSink.cpp  KeyHandler.cpp  KeyHandlerEditSession.cpp  KeyHandlerEditSession.h  KeyStateCategory.cpp  KeyStateCategory.h  LanguageBar.cpp  (+26 more)
cpp/SampleIME/Dictionary/: SampleIMESimplifiedQuanPinUtf8.txt
cpp/SampleIME/cbindgen/: composition_processor.h  dictionary_parser.h  globals.h  ime.h  input_processor.h  itf_components.h  numberkey_windows.h  ruststringrange.h
cpp/Setup/: Setup.vdproj
rust/: Cargo.toml  rust-cbindgen.h
rust/compare_with_wildcard/: Cargo.toml  README.md  compare_with_wildcard.h
rust/compare_with_wildcard/src/: lib.rs
rust/composition_processor/: Cargo.toml  README.md  build.rs  cbindgen.toml  composition_processor.h
rust/composition_processor/src/: engine.rs  lib.rs  modifiers.rs  test_virtual_key.rs
rust/composition_processor/src/engine/: compartment_update_listener.rs  compartment_wrapper.rs  keystroke_buffer.rs  language_bar.rs  modifiers.rs  preserved_keys.rs  punctuations.rs
rust/dictionary_parser/: Cargo.toml  README.md  dictionary_parser.h
rust/dictionary_parser/src/: engine.rs  lib.rs  parser.rs
rust/globals/: Cargo.toml  README.md  cbindgen.toml  globals.h
rust/globals/src/: lib.rs
rust/ime/: Cargo.toml  build.rs
rust/ime/src/: com.rs  dll.rs  font.rs  icon.rs  lib.rs  registry.rs  resources.rs
rust/input_processor/: Cargo.toml  cbindgen.toml
rust/input_processor/src/: key_event_sink.rs  lib.rs
rust/input_processor/src/key_event_sink/: is_key_eaten.rs
rust/itf_components/: Cargo.toml  cbindgen.toml
rust/itf_components/src/: compartment.rs  compartment_event_sink.rs  language_bar.rs  lib.rs
rust/numberkey_windows/: Cargo.toml  README.md  build.rs
rust/numberkey_windows/src/: lib.rs
rust/ruststringrange/: Cargo.toml  README.md  ruststringrange.h
rust/ruststringrange/src/: lib.rs
rust/src/: lib.rs
rust/window_classes/: Cargo.toml
rust/window_classes/src/: base_window.rs  lib.rs  window_trait.rs
