[package]
name = "composition_processor"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

[lib]
name = "composition_processor"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dictionary_parser = { path = "../dictionary_parser" }
ruststringrange = { path = "../ruststringrange" }
windows = "0.13.0"

[build-dependencies]
windows = "0.13.0"
