[package]
name = "dictionary_parser"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2021"

[lib]
name = "dictionary_parser"
crate-type = ["rlib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruststringrange = { path = "../ruststringrange" }
