[package]
name = "globals"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "globals"
crate-type = ["rlib", "staticlib"]

[dependencies]
windows = "0.35.0"
