[package]
name = "ime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ime"
crate-type = ["staticlib"]

[dependencies]
globals = { path = "../globals" }
windows = "0.13.0"
winreg = "0.9.0"

[build-dependencies]
windows = "0.13.0"
