[package]
name = "ime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ime"
crate-type = ["rlib", "staticlib"]

[dependencies]
globals = { path = "../globals" }
winreg = "0.10.1"

[dependencies.windows]
version = "0.35.0"
features = [
  "Win32_System_Com",
  "Win32_System_SystemServices",
]
