[package]
name = "ime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ime"
crate-type = ["rlib", "staticlib"]

[dependencies]
globals = { path = "../globals" }
winreg = "0.10.1"

[dependencies.windows]
version = "0.38.0"
features = [
  "alloc",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
]
