[package]
name = "input_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "input_processor"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
composition_processor = { path = "../composition_processor" }
globals = { path = "../globals" }
itf_components = { path = "../itf_components" }

[dependencies.windows]
version = "0.38.0"
features = [
  "Win32_UI_TextServices",
]
