[package]
name = "itf_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "itf_components"
crate-type = ["staticlib"]

[dependencies]
globals = { path = "../globals" }

[dependencies.windows]
version = "0.26.0"
features = [
  "build",
  "std",
  "Win32_Foundation",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Ole",
]
