[package]
name = "itf_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "itf_components"
crate-type = ["rlib", "staticlib"]

[dependencies]
ime = { path = "../ime" }
globals = { path = "../globals" }
ruststringrange = { path = "../ruststringrange" }

[dependencies.windows]
version = "0.35.0"
features = [
  "alloc",
  "implement",
  "Win32_Foundation",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Ole",
]
