[package]
name = "numberkey_windows"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

[lib]
name = "numberkey_windows"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
