[package]
name = "ruststringrange"
version = "0.1.0"
authors = ["Kagami Sascha Rosylight <saschanaz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ruststringrange"
crate-type = ["staticlib"]

[dependencies]
compare_with_wildcard = { path = "../compare_with_wildcard" }
